--- a/css/css-layout/grids/8-placement-starting-point.html
+++ b/css/css-layout/grids/8-placement-starting-point.html
@@ -25,7 +25,9 @@
             background-color: rgb(207,232,220);
             border: 2px solid rgb(79,185,227);
         }
-
+        header {
+            grid-column: 1 / 4;
+        }
         aside {
             border-right: 1px solid #999;
         }
